
Wed Aug 29 14:11:51 CEST 2007  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* ChangeLog: Started ChangeLog

Wed Aug 29 14:27:37 CET 2007  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* Released pcaptxt 0.1

Fri Aug 31 19:24:16 CEST 2007  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* src/pcaptxt.c
		src/snscanf.h
		src/snscanf.c: Autoconfiscated project
	* configure.ac, */Makefile.am, ...: Added autoconfiscation infrastructure

Fri Aug 31 19:24:16 CEST 2007  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* src/pcaptxt.c: Fixed stupid version bug

Tue Sep  4 15:38:07 CEST 2007  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* various: Finished project autoconfiscation
	* various: Got rid of pedantic/Wall warnings

Mon Feb 25 17:11:00 CEST 2008  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* src/pcaptxt.c: Fixed ip option bug

Mon Jun  9 19:52:00 CEST 2008  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* new: Added libhash link
	* new: Added seq/ack calculation code

Mon Jun 16 16:28:00 CEST 2008  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* fix: reduced pcaptxt footprint
	* fix: added CWR and ECN flags to TCP
	* fix: lots of fixes
	* new: Added scripts directory to distro
	* new: Added pcapdiff.sh script

Thu Jun 26 18:59:00 CEST 2008  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* new: support for ipv6
	* fix: invalid ip headers should invalidate l3_proto

Fri Jul  4 12:05:00 CEST 2008  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* fix: fixed crash on jumbo packets

Wed Jul 16 17:31:00 CEST 2008  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* fix: fixed bug on tcp_checksum
	* fix: got rid of ip_len parameter in tcp_checksum

Thu Aug  7 13:10:00 CEST 2008  Jose M. Gonzalez <chema@cs.berkeley.edu>
	* new: added some options to pcapdiff
	* fix: fixed minor bugs on snarfing bogus TCP and IP packets
